--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,3 +1,23 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* Bootstrap, DataTables ve Bootstrap Icons'u içe aktarın */
+/*
+@import url('https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css');
+@import url('https://cdn.datatables.net/v/dt/dt-2.2.2/datatables.min.css');
+@import url('https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.0/font/bootstrap-icons.min.css');
+*/
+
+
+/* https://datatables.net/extensions/buttons/examples/styling/bootstrap5.html */
+/*
+@import url('https://cdn.datatables.net/buttons/3.0.0/css/buttons.bootstrap5.css');
+@import url('https://cdn.datatables.net/2.0.0/css/dataTables.bootstrap5.css');
+@import url('https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.3.0/css/bootstrap.min.css');
+*/
+
+/*
+@import url('https://cdn.datatables.net/buttons/2.3.2/css/buttons.dataTables.min.css');
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+ */
